--- a/03-NPM/package.json
+++ b/03-NPM/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "nodejs-npm-sample",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "NPM Sample code (Adventures in Node.js)",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Andres E. Rojas Escobar",
   "license": "ISC"
 }
